--- a/view/node/detailsent.html
+++ b/view/node/detailsent.html
@@ -47,7 +47,7 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered">
                         <tbody>
                             <tr class="bg-gray">
                                 <th class="text-center">Daftar Isian</th>
@@ -75,7 +75,7 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered table-striped" role="grid">
+                    <table class="table table-bordered" role="grid">
                         <tbody>
                             <tr class="bg-gray">
                                 <th style="display:none"></th>
