--- a/view/node/detailcompose.html
+++ b/view/node/detailcompose.html
@@ -41,11 +41,7 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-<<<<<<< HEAD
-                    <table class="table table-bordered table-striped">
-=======
-                    <table class="table table-bordered table-striped" role="grid">
->>>>>>> dbe310e401ebaddec8551c8331c994648c1f378b
+                    <table class="table table-bordered" role="grid">
                         <tbody>
                             <tr class="bg-gray">
                                 <th class="text-center">Kode Billing</th>
@@ -78,11 +74,7 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-<<<<<<< HEAD
-                    <table class="table table-bordered table-striped">
-=======
-                    <table class="table table-bordered table-striped" role="grid">
->>>>>>> dbe310e401ebaddec8551c8331c994648c1f378b
+                    <table class="table table-bordered" role="grid">
                         <tbody>
                             <tr class="bg-gray">
                                 <th class="text-center">Daftar Isian</th>
@@ -109,11 +101,7 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-<<<<<<< HEAD
-                    <table class="table table-bordered table-striped">
-=======
-                    <table class="table table-bordered table-striped" role="grid">
->>>>>>> dbe310e401ebaddec8551c8331c994648c1f378b
+                    <table class="table table-bordered" role="grid">
                         <tbody>
                             <tr class="bg-gray">
                                 <th style="display:none"></th>
