--- a/view/node/detailinbox.html
+++ b/view/node/detailinbox.html
@@ -67,7 +67,7 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered">
                         <tbody>
                             <tr class="bg-gray">
                                 <th class="text-center">Daftar Isian</th>
@@ -95,7 +95,7 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered table-striped" role="grid">
+                    <table class="table table-bordered" role="grid">
                         <tbody>
                             <tr class="bg-gray">
                                 <th style="display:none"></th>
