--- a/view/node/detilberkasmasuk.html
+++ b/view/node/detilberkasmasuk.html
@@ -92,7 +92,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="table-responsive">
-                                <table class="table table-bordered table-striped">
+                                <table class="table table-bordered">
                                     <tbody>
                                         <tr class="bg-gray">
                                             <th class="text-center">Daftar Isian</th>
@@ -120,7 +120,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="table-responsive">
-                                <table class="table table-bordered table-striped">
+                                <table class="table table-bordered">
                                     <tbody>
                                         <tr class="bg-gray">
                                             <th style="display:none"></th>
