--- a/view/index.html
+++ b/view/index.html
@@ -83,12 +83,20 @@ class="hold-transition skin-blue fixed sidebar-mini"
                 <li class="header" style="font-weight: bold; color: aliceblue;">MAIN NAVIGATION</li>
 
                 <!-- ./Dashboard -->
-                <li class="">
-                    <a href="/">
-                        <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Dashboard</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
                     </a>
+                    <ul class="treeview-menu">
+                        <li class=""><a href="/"><i class="fa fa-circle-o"></i>Register</a></li>
+                        <li class=""><a href="/ndlpersil"><i class="fa fa-circle-o"></i>NDL Bidang</a></li>
+                    </ul>
                 </li>
-                
+
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-user-circle" aria-hidden="true"></i>
