--- a/view/page/home/dashboard.html
+++ b/view/page/home/dashboard.html
@@ -16,6 +16,7 @@
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
+<script src="{{ static_url('js/page/home/dashboard.js') }}"></script>
 {% end %}
 
 {% block content %}
