--- a/view/page/register/compose_list.html
+++ b/view/page/register/compose_list.html
@@ -113,12 +113,14 @@
                                     <th>Register</th>
                                     <th>Tanggal Register</th>
                                     <th>Petugas Register</th>
+                                    <th>Petugas Terakhir</th>
                                     <th>Nomor Berkas</th>
                                     <th>Tahun Berkas</th>
                                     <th>Kecamatan</th>
                                     <th>Desa</th>
                                     <th>Kegiatan</th>
                                     <th>Prosedur</th>
+                                    <th>Pemohon/Pemilik</th>
                                     <th>Status</th>
                                     <th></th>
                                 </tr>
